# mockex

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  benchmarks.md  protocol.md
scripts/: download_sample.sh  feed_to_itch.py  generate_feed.py  generate_itch_feed.py  itch_to_feed.py  run_bench.sh
src/app/: main_bench.cpp  main_replay.cpp
src/book/: order_book.hpp
src/common/: flat_hash_map.hpp  latency_tracker.hpp  price_level_map.hpp  ring_buffer.hpp  test_runner.hpp  time.hpp  types.hpp
src/exchange/: exchange_sim.hpp
src/feed/: itch_parser.cpp  itch_parser.hpp  itch_replay_reader.cpp  itch_replay_reader.hpp  parser.cpp  parser.hpp  replay_reader.cpp  replay_reader.hpp
src/gateway/: order_gateway.hpp
src/portfolio/: portfolio.hpp
src/risk/: risk_engine.hpp
src/strategy/: market_maker.hpp
tests/: book_tests.cpp  exchange_tests.cpp  parser_tests.cpp  risk_tests.cpp
